<resources>
    <string name="app_name">Piks</string>
    <string name="key_internal_uri_extsdcard_photos">uri_extsdcard_photos</string>
    <string name="album_size">%s 照片</string>
    <!-- media info-->
    <string name="media_title">%1$d / %2$d</string>
    <string name="media_name">标题 : %s</string>
    <string name="media_time">时间 : %s</string>
    <string name="media_width">宽度 : %d</string>
    <string name="media_height">高度 : %d</string>
    <string name="media_orientation">方向 : %d</string>
    <string name="media_size">尺寸 : %s</string>
    <string name="media_path">路径 : %s</string>
    <string name="share">分享</string>
    <!-- secondary menu -->
    <string name="recommened">推荐给你的朋友</string>
    <string name="about">关于</string>
    <!-- about -->
    <string name="about_author">关于作者</string>
    <string name="author">作者</string>
    <string name="check_introduce">查看欢迎页</string>
    <string name="thx">感谢开源项目及资源的支持</string>
    <string name="check_update">检查更新</string>
    <string name="copyright_display">Copyright © 2016 JungleLaw.\n All Right Reserved</string>
    <string name="update">更新</string>
    <string name="update_title">检测到新版本</string>
    <!-- about me -->
    <string name="location">坐标</string>
    <string name="location_display">深圳</string>
    <string name="weibo">微博</string>
    <string name="weibo_account">http://weibo.com/u/3511211591</string>
    <string name="email">邮件</string>
    <string name="email_account">JungleLaw@live.com</string>
    <string name="github">Github</string>
    <string name="github_account">https://github.com/JungleLaw</string>
    <string name="wechat">微信</string>
    <!-- about me -->
    <string name="entry_immediately">立即体验</string>
    <!-- appreciation -->
    <string name="appreciation">感谢</string>
    <!-- generation -->
    <string name="delete">删除</string>
    <string name="cancel">取消</string>

    <!-- filter -->
    <string name="filter_normal">NORMAL</string>
    <string name="filter_amaro">AMARO</string>
    <string name="filter_rise">RISE</string>
    <string name="filter_hudson">HUDSON</string>
    <string name="filter_xproii">XPROII</string>
    <string name="filter_sierra">SIERRA</string>
    <string name="filter_lomo">LOMOFI</string>
    <string name="filter_earlybird">EARLYBIRD</string>
    <string name="filter_sutro">SUTRO</string>
    <string name="filter_toaster">TOASTER</string>
    <string name="filter_brannan">BRANNAN</string>
    <string name="filter_inkwell">INKWELL</string>
    <string name="filter_walden">WALDEN</string>
    <string name="filter_hefe">HEFE</string>
    <string name="filter_valencia">VALENCIA</string>
    <string name="filter_nashville">NASHVILLE</string>
    <string name="filter_1977">1977</string>
    <string name="filter_lordkelvin">LORDKELVIN</string>
    <!--uCrop-->
    <string name="ucrop_label_original">Original</string>
    <string name="ucrop_label_edit_photo">裁剪</string>

    <string name="ucrop_menu_crop">完成</string>

    <string name="ucrop_error_input_data_is_absent">Both input and output Uri must be specified</string>
    <string name="ucrop_mutate_exception_hint">Therefore, override color resource (ucrop_color_toolbar_widget) in your app to make it work on pre-L devices</string>
    <!-- -->
    <string name="rename_suc">重命名成功</string>
    <string name="rename_fail">重命名失败</string>
    <string name="move_suc">移动文件成功</string>
    <string name="move_fail">移动文件失败</string>

</resources>
