<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/black_dark"
              android:orientation="vertical">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        android:gravity="center"
        android:text="@string/update_title"
        android:textColor="@color/white_dark"
        android:textSize="18sp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="4dip"
        android:layout_marginRight="4dip"
        android:background="@color/grey"/>

    <TextView
        android:id="@+id/text_update_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left|top"
        android:minLines="2"
        android:padding="10dip"
        android:textColor="@color/white_dark"
        android:textSize="14sp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="4dip"
        android:layout_marginRight="4dip"
        android:background="@color/grey"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_update"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/selector_clickable_background"
            android:gravity="center"
            android:text="@string/update"
            android:textColor="@color/white_dark"/>

        <View
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:layout_marginBottom="4dip"
            android:layout_marginTop="4dip"
            android:background="@color/grey"/>

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/selector_clickable_background"
            android:gravity="center"
            android:text="@string/cancel"
            android:textColor="@color/white_dark"/>
    </LinearLayout>
</LinearLayout>