<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <com.law.think.frame.widget.TitleBar
        android:id="@+id/titlebar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/abc_action_bar_default_height_material"
        android:clipToPadding="true"
        app:backgroudColor="@color/primary"
        app:leftDrawableID="@drawable/selector_back_bg"
        app:titleText="@string/author"
        app:titleTextSize="20sp"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black_dark"
        android:fillViewport="true">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="278dip">

                <com.github.florent37.diagonallayout.DiagonalLayout
                    android:layout_width="match_parent"
                    android:layout_height="250dip"
                    app:diagonal_angle="10"
                    app:diagonal_gravity="left">

                    <com.flaviofaria.kenburnsview.KenBurnsView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/img_shenzhen_cover"/>
                    <!--<ImageView-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="match_parent"-->
                    <!--android:scaleType="fitCenter"-->
                    <!--android:src="@drawable/img_shenzhen_cover"/>-->

                </com.github.florent37.diagonallayout.DiagonalLayout>

                <com.law.think.frame.widget.image.ShapedImageView
                    android:id="@+id/img_head"
                    android:layout_width="76dip"
                    android:layout_height="76dip"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="38dip"
                    android:src="@drawable/my_head_img"
                    app:round_radius="4dip"
                    app:shape_mode="circle"
                    app:stroke_color="@color/white_dark"
                    app:stroke_width="1px"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@id/img_head"
                    android:layout_alignParentBottom="true"
                    android:layout_alignTop="@id/img_head"
                    android:layout_toRightOf="@id/img_head"
                    android:gravity="center"
                    android:text="JungleLaw"
                    android:textColor="@color/white_dark"
                    android:textSize="26sp"
                    android:textStyle="bold"/>
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/icon_menu_location"
                        android:drawablePadding="10dip"
                        android:gravity="left|center_vertical"
                        android:padding="10dip"
                        android:text="@string/location"
                        android:textColor="@color/white_dark"
                        android:textSize="18sp"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawablePadding="10dip"
                        android:gravity="right|center_vertical"
                        android:padding="10dip"
                        android:text="@string/location_display"
                        android:textColor="@color/white_dark"
                        android:textSize="18sp"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layout_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/selector_clickable_background"
                    android:clickable="true"
                    android:descendantFocusability="blocksDescendants"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/icon_menu_email"
                        android:drawablePadding="10dip"
                        android:gravity="left|center_vertical"
                        android:padding="10dip"
                        android:text="@string/email"
                        android:textColor="@color/white_dark"
                        android:textSize="18sp"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawablePadding="10dip"
                        android:gravity="right|center_vertical"
                        android:padding="10dip"
                        android:text="@string/email_account"
                        android:textColor="@color/white_dark"
                        android:textSize="18sp"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layout_weibo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/selector_clickable_background"
                    android:clickable="true"
                    android:descendantFocusability="blocksDescendants"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/icon_menu_weibo"
                        android:drawablePadding="10dip"
                        android:gravity="left|center_vertical"
                        android:padding="10dip"
                        android:text="@string/weibo"
                        android:textColor="@color/white_dark"
                        android:textSize="18sp"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawablePadding="10dip"
                        android:gravity="right|center_vertical"
                        android:padding="10dip"
                        android:text="@string/weibo_account"
                        android:textColor="@color/white_dark"
                        android:textSize="18sp"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layout_wechat_qrcode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/selector_clickable_background"
                    android:clickable="true"
                    android:descendantFocusability="blocksDescendants"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dip"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:drawableLeft="@drawable/icon_menu_wechat"
                        android:drawablePadding="10dip"
                        android:gravity="left|center_vertical"
                        android:padding="10dip"
                        android:text="@string/wechat"
                        android:textColor="@color/white_dark"
                        android:textSize="18sp"/>

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="10dip"
                        android:scaleType="center"
                        android:src="@drawable/icon_qrcode"/>
                    <!--<TextView-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:background="@null"-->
                    <!--android:drawablePadding="10dip"-->
                    <!--android:gravity="right|center_vertical"-->
                    <!--android:padding="10dip"-->
                    <!--android:text="@string/wechat"-->
                    <!--android:textColor="@color/white_dark"-->
                    <!--android:textSize="18sp"/>-->
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layout_github"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/selector_clickable_background"
                    android:clickable="true"
                    android:descendantFocusability="blocksDescendants"
                    android:orientation="horizontal"
                    android:visibility="gone">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:drawableLeft="@drawable/icon_menu_github"
                        android:drawablePadding="10dip"
                        android:gravity="left|center_vertical"
                        android:padding="10dip"
                        android:text="@string/github"
                        android:textColor="@color/white_dark"
                        android:textSize="18sp"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawablePadding="10dip"
                        android:gravity="right|center_vertical"
                        android:padding="10dip"
                        android:text="@string/github_account"
                        android:textColor="@color/white_dark"
                        android:textSize="18sp"/>
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>


</LinearLayout>