<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <com.law.think.frame.widget.TitleBar
        android:id="@+id/titlebar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/abc_action_bar_default_height_material"
        android:clipToPadding="true"
        app:backgroudColor="@color/primary"
        app:leftDrawableID="@drawable/selector_back_bg"
        app:titleText="@string/about"
        app:titleTextSize="20sp"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black_dark"
        android:fillViewport="true">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/img_logo"
                android:layout_width="140dip"
                android:layout_height="140dip"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dip"
                android:src="@mipmap/ic_piks"/>

            <TextView
                android:id="@+id/text_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/img_logo"
                android:layout_gravity="center_horizontal"
                android:text="Piks"
                android:textColor="@color/white_dark"
                android:textSize="36sp"/>

            <TextView
                android:id="@+id/text_version_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/text_logo"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/white_dark"
                android:textSize="18sp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/text_version_name"
                android:layout_marginTop="5dip"
                android:background="@color/black_dark"
                android:orientation="vertical">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:background="@color/grey"/>

                <Button
                    android:id="@+id/btn_check_for_update"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/selector_clickable_background"
                    android:drawableLeft="@drawable/icon_menu_update"
                    android:drawablePadding="10dip"
                    android:gravity="left|center_vertical"
                    android:padding="10dip"
                    android:text="@string/check_update"
                    android:textColor="@color/white_dark"
                    android:textSize="18sp"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:layout_marginLeft="10dip"
                    android:background="@color/grey"/>

                <Button
                    android:id="@+id/btn_intro_page"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/selector_clickable_background"
                    android:drawableLeft="@drawable/icon_menu_welcome"
                    android:drawablePadding="10dip"
                    android:gravity="left|center_vertical"
                    android:padding="10dip"
                    android:text="@string/check_introduce"
                    android:textColor="@color/white_dark"
                    android:textSize="18sp"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:layout_marginLeft="10dip"
                    android:background="@color/grey"/>

                <Button
                    android:id="@+id/btn_thx_for_opensource"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/selector_clickable_background"
                    android:drawableLeft="@drawable/icon_menu_favorite"
                    android:drawablePadding="10dip"
                    android:gravity="left|center_vertical"
                    android:padding="10dip"
                    android:text="@string/thx"
                    android:textColor="@color/white_dark"
                    android:textSize="18sp"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:layout_marginLeft="10dip"
                    android:background="@color/grey"/>

                <Button
                    android:id="@+id/btn_about_me"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/selector_clickable_background"
                    android:drawableLeft="@drawable/icon_menu_me"
                    android:drawablePadding="10dip"
                    android:gravity="left|center_vertical"
                    android:padding="10dip"
                    android:text="@string/about_author"
                    android:textColor="@color/white_dark"
                    android:textSize="18sp"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:background="@color/grey"/>
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dip"
                android:gravity="center"
                android:text="@string/copyright_display"
                android:textColor="@color/white_dark"
                android:textSize="18sp"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>